--- a/src/components/content/grid/Grid.scss
+++ b/src/components/content/grid/Grid.scss
@@ -1,7 +1,7 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  grid-template-rows: 360px;
+  grid-auto-rows: 360px;
   row-gap: 5rem;
   column-gap: 2rem;
 }
